# mozichem-mcp

./: .gitignore  README.md  pyproject.toml
mozichem_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mozichem_mcp/mcp/: eos_models.py  flash_calculation.py
